@@ -23,4 +23,6 @@
 	- A new, rudimentary way to configure server variables has been added. It needs a facelift.
 2018-06-23
 	- Fixed a bug where the bot wouldn't work in servers that didn't have a nadeko logging variable in the server config.
-	- Fixed a permissions bug with the configure command.	
+	- Fixed a permissions bug with the configure command.
+2018-06-23
+	- Removed a bit of voice-related code that did literally nothing.	
